/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.healthcardaccess;

import de.gematik.ti.cardreader.provider.api.card.ICardChannel;

/**
 * Interface to be implemented by `HealthCard`s.
 *
 */
public interface IHealthCard {
    /**
     * Returns the currently active card channel.
     * 
     * @return cardChannel
     */
    ICardChannel getCurrentCardChannel();

    /**
     * Returns the status of the `HealthCard` object.
     * 
     * @return
     */
    IHealthCardStatus getStatus();
}
