/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.healthcardaccess;

import de.gematik.ti.healthcardaccess.operation.ResultOperation;

/**
 * Interface for all HealthCardCommands with the method to execute the command on a specific health card
 *
 * @created 05-Jul-2018 14:33:52
 * @param <T> Type of the ResultOperation
 */
public interface IHealthCardCommand<T> {

    /**
     * Execute the command on a health card
     *
     * @param iHealthCard health card to execute the command
     * @return result operation
     */
    ResultOperation<T> executeOn(IHealthCard iHealthCard);
}
